style.css
@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100..900;1,100..900&display=swap');

/* total document style */

body {
    font-family: Roboto, sans-serif;
    height: 100vh;
    padding: 0;
    margin: 0;
    display: flex;
    flex-direction: column;
}

.header, .info {
    padding-left: 300px;
    padding-right: 300px;
}

/* HEADER style */

.header {
    color: white;
    background-color: #1F2937;
    padding-top: 10px;
    padding-bottom: 0px;
    display: flex;
    flex-direction: column;
    flex: 1;
}

.top {
    display: flex;
    justify-content: space-between;
    margin-bottom: 50px;
}

.logo {
    color: #F9FAF8;
    font-size: 24px;
}

ul {
    display: flex;
    margin: 0;
    padding: 0;
    list-style-type: none;
    gap: 12px;
}

a {
    text-decoration: none;
}

.main {
    display: flex;
    justify-content: space-between;
    margin-bottom: 40px;
    gap: 20px;
}

.main-img {
    display: flex;
    justify-content: center;
    flex: 1;
}

.header img {
    flex: 1;
}

.main-text {
    flex: 1;
}

p {
    margin: 0;
}

.main .title {
    color: #F9FAF8;
    font-size: 48px;
    font-weight: 900;
}

a, .secondary {
    font-size: 18px;
    color: #E5E7EB;
}

button {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #3882F6;
    color: #F9FAF8;
    border: none;
    border-radius: 5px;
    padding: 3px 15px;
    margin-top: 5px;
}

/* INFO section style */

.info {
    text-align: center;
    padding-top: 25px;
    padding-bottom: 50px;
    margin: 0;
    flex: 1;
}

.info .title {
    color: #1F2937;
    font-size: 36px;
    font-weight: 900;
    margin-bottom: 38px;
}

.info .container {
    display: flex;
    justify-content: space-around;
}

.info-box {
    display: flex;
    flex-direction: column;
    align-items: center;
    gap: 10px;
    width: 170px;
}

.info img {
    width: 170px;
    height: 180px;
    border: 5px solid #3882F6;
    border-radius: 10%;
}

.info-box .text {
    font-size: 18px;
}

/* QUOTE */

.quote {
    display: flex;
    justify-content: center;
    align-items: center;
    background-color: #E5E7EB;
    padding: 0;
    margin: 0;
    flex: 1;
}

.quote-container {
    width: 500px;
}



/* REGISTRATION */

.registration {
    display: flex;
    justify-content: center;
    align-items: center;
    flex: 1;
}

.registration .container {
    flex: 0 1 600px;
    height: 300px;
}

/* FOOTER */

.footer {
    background-color: #1F2937;
    color: #E5E7EB;
    display: flex;
    justify-content: center;
    align-items: center;
    height: 72px;
}

